<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, gameActivity!</string>
    <string name="app_name">KidsGame: Aprendiendo a leer</string>
    <string name="iniciar_juego">1ª</string>
    <string name="juego_text1">Pulsa para escuchar</string>
    <string name="silabas_ca">CA</string>
    <string name="silabas_ce">CE</string>
    <string name="silabas_ci">CI</string>
    <string name="silabas_co">CO</string>
    <string name="silabas_cu">CU</string>
    <string name="iniciar">Iniciar</string>
    <string name="siguiente">Siguiente</string>
    <string name="repetir">Repetir</string>
    <string name="encontrar_text1">Escucha y encuentra</string>
    <string name="grupo1">LA,LE,LI,LO,LU</string>
    <string name="main_encontrar">2ª</string>
    <string name="explicacion">\?</string>
    <string name="main_completar">3ª</string>
    <string name="completar_text">Completa la palabra</string>
    <string name="completar_palabra">completar</string>
    
</resources>